k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: manifest
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 8080
